--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
-*{
+*, *::before, *::after{
     box-sizing: border-box;
     color: #0c1825;
+    margin: 0;
 }
 
-
-body{
+header, main, .a, .b, .c, .d, .e{
     padding: 0px 60px 0px 80px;
 }
 
@@ -13,13 +13,24 @@ a{
     cursor: pointer;
 }
 
+p{
+    font-family: 'Karla', sans-serif;
+    font-weight: 0;
+}
+
+h1{
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+}
+  
 .nav-bar{
-    margin-top: 15px;
-    top: 0;
     overflow: hidden;
     display: flex;
     flex-direction: row;
     left: 0;
+    top: 0;
+    margin-top: 15px;
+    height: 170px;
 }
 
 nav ul {
@@ -32,6 +43,7 @@ nav li {
     float: left;
   }
 
+ 
 nav a {
     display: inline;
     font-size: 17px;
@@ -44,10 +56,13 @@ nav a {
     padding: 0 22px 0 0;
 }
 
+.nav-list{
+    width: 80%;
+}
+
 .nav-item{
-    padding: 4px 22px;
+    padding: 4px 20px;
     font-family: 'DM Sans', sans-serif;
-    flex-direction: row;
     color:#b8b7b7;
     font-weight: 400;
     margin: 12px 0;
@@ -61,6 +76,64 @@ nav a {
 .nav-right{
     float:right;
 }
+
+#save{
+    position: relative;
+    display: inline-block;
+}
+
+.save-hover-menu{
+    display: none;
+    border-radius: 9px;
+    background-color:white;
+    width: 350px;
+    height: 110px;
+    box-shadow: 0 0 3px #b8b7b7;
+    padding: 15px;
+}
+
+.dropmenu{
+    position: absolute;
+    z-index: 1;
+    right: -120px;
+    top: 35px;
+}
+
+.save-hover-item{
+    width: 50%;
+    display: block;
+}
+
+.save-hover-item:hover{
+    background-color: #ebe7e760;
+    color: #0D60D8;
+}
+
+.save-hover-item a{
+    display: flex;
+    flex-direction: row;
+    margin: 5px;
+}
+
+.save-hover-item p{
+    margin: 0;
+    padding-left: 12px;
+    padding-bottom: 4px;
+    font-size: 14px;
+}
+
+.save-hover-item{
+    display: flex;
+    flex-direction: row;
+}
+
+.save-hover-item>*{
+    flex: 1 1 150px;
+    margin: 10px;
+}
+
+
+#save:hover .save-hover-menu {display: block;}
 
 .btn1, .btn2{
     border-radius: 10px;
@@ -105,17 +178,6 @@ nav a {
     color: white;
 }
 
-p{
-    font-size: 17px;
-    font-family: 'Karla', sans-serif;
-    font-weight: 0;
-}
-
-h1{
-    font-family: 'Poppins', sans-serif;
-    font-weight: bold;
-}
-
 .hamburger{
     display: none;
     cursor: pointer;
@@ -138,7 +200,7 @@ h1{
 .row1 h1{
     line-height: 80px;
     font-size: 65px;
-    padding: 150px 20px 0 0;
+    padding: 60px 20px 0 0;
 }
 
 .row1 p{
@@ -146,12 +208,7 @@ h1{
 }
 
 .row1 h1, p{
-    margin: 10px 0 0 0;
-}
-
-main{
-    flex-direction: row;
-    padding-right: 100px;
+    margin: 0;
 }
 
 .row1, .row2{
@@ -172,6 +229,7 @@ main{
 .row1-col2{
     float: left;
     width: 40%;
+    padding: 10px;
 }
 
 .img2 {
@@ -187,13 +245,10 @@ main{
 
 }
 
-.btns .btn1, .btn2{
-    margin-right: 20px;
-    text-align: center;
-}
-
 .btns .btn1{
+    text-align: center;
     transition: ease-in 0.3s;
+    padding: 8px 20px;
 }
 
 .btns .btn1:hover{
@@ -202,13 +257,6 @@ main{
     transform: translate(0, -10px);
 }
 
-.btns .btn1{
-    padding: 8px 20px;
-}
-
-.btns .btn1{
-    padding: 8px 20px;
-}
 
 .btn-group{
     display: flex;
@@ -218,6 +266,7 @@ main{
 .btn-group p{
     padding: 6px 0 1px 10px;
     margin: 0;
+    font-weight: bold;
 }
 
 .btn-group img{
@@ -228,12 +277,17 @@ main{
     position: relative;
     top: 0;
     left: 0;
+    float: left;
+    height: 120px;
+    max-width: 320px;
+    padding-top: 2em;
+    width: 100%;
   }
 
 #img1 {
-    position: relative;
-    top: 0;
-    left: 0;
+    position: absolute;
+    top: 95px;
+    right: 200px;
     padding-top: 80px;
   }
 
@@ -333,6 +387,8 @@ main{
 #c-5, #c-10{
     top: 625px;
 }
+
+
 
 .row2{
     margin: 180px 0 60px 30px;
@@ -473,6 +529,7 @@ main{
     background-color: #fde7f5;
 }
 
+
 .row4{
     display: flex;
     flex-direction: row;
@@ -524,6 +581,7 @@ main{
     font-size: 20px;
 }
 
+
 #circle-{
     color: #e9e0f856;
     font-size: 270px;
@@ -567,31 +625,33 @@ main{
     top: 2200px;
 }
 
+
+
 .row5{
     display: flex;
     flex-direction: row;
     margin-bottom: 100px;
     position: absolute;
     left: 0px;
-    height: 450px;
+    height: 500px;
 }
 
 .row5-col1{
     background-color: #0D60D8;
-    padding: 30px 150px ;
-    width: 70%;
+    padding: 40px 150px ;
+    width: 65%;
 }
 
 .row5-col2 {
     width: 600px;
-    height: 450px;
+    height: 500px;
     overflow: hidden;
 }
 
 .row5-col2 img{
     width: 900px;
-    height: 500px;
-    margin: -15px 0 0 -200px;
+    height: 550px;
+    margin: -15px 0 0 -170px;
 }
 
 .row5-col1 h1{
@@ -621,6 +681,8 @@ main{
     border-radius: 50%;
     color: #0D60D8;
 }
+
+
 
 .row6{
     margin-top: 700px;
@@ -707,6 +769,7 @@ main{
     margin-right: 8px;
 }
 
+
 .row7{
     margin-top: 100px;
     background-color: #f7f7f7;
@@ -735,9 +798,11 @@ main{
     z-index: -1;
 }
 
+
 footer{
     padding-bottom: 30px;
 }
+
 
 .footer{
     margin-top: 100px;
@@ -781,6 +846,7 @@ footer p{
 
 .piggyvest-{
     color: #0D60D8;
+    padding-bottom: 40px;
 }
 
 .fa-brands{
@@ -795,33 +861,27 @@ footer p{
     transform: translate(0, -6px);
 }
 
-@media screen and (max-width: 1200px) {
-    body{
-        padding: 0px 10px 0px 10px;
+@media screen and (max-width: 540px) {
+    header, main, .a, .b, .c, .d, .e{
+        padding: 0px 15px;
     }
 
-    .nav-bar{
-        width: 90%;
+    .nav-right{
+        float:none;
     }
 
     .nav-list{
         display: flex;
         flex-wrap: wrap;
         position: fixed;
-        top: 150px;
+        top: 120px;
         background-color: white;
         z-index: 1;
         left: -100%;
         width: 100%;
         transition: 0.1s;
-        padding: 0;
+        padding: 20px 0;
 
-    }
-
-    .nav-right{
-        display: flex;
-        flex-wrap: wrap;
-        top: 300px;
     }
 
     .nav-item{
@@ -831,27 +891,30 @@ footer p{
         margin-bottom: 20px;
     }
 
+    .nav-right{
+        display: flex;
+        flex-wrap: wrap;
+        flex: 100%;
+    }
+
     .nav-right .nav-item{
-        flex: 1 1 500px;
+        flex: 1 1 600px;
         text-align: center;
         justify-content: center;
         margin: 10px;
     }
 
-    .nav-right .btn1{
-        padding: 20px 150px;
+    .nav-right .nav-item .btn1 ,.nav-right .nav-item .btn2{
+        width: 100%;
     }
 
-    .nav-right .btn2{
-        padding: 20px 150px;
-    }
-
-    /* body{
-        position: fixed;
-    } */
     #navbar{
         display: flex;
         flex-direction: row;
+    }
+
+    .nav-bar{
+        width: 90%;
     }
     
     .hamburger{
@@ -863,6 +926,7 @@ footer p{
         border-radius: 3px;
         color: #0c1825;
         margin-top: 30px;
+        float: right;
     }
 
     .hamburger.active .bar:nth-child(2){
@@ -886,7 +950,6 @@ footer p{
         left:0;
     }
 
-
     .row1{
         display: flex;
         flex-wrap: wrap;
@@ -896,17 +959,23 @@ footer p{
         margin-right: 0;
     }
 
+    .row1-col1 .btn1{
+        width: 50%;
+    }
+
     .row1-col1 p{
         padding: 0;
     }
 
     .row1 h1{
-        padding-right: 0;
+        padding: 50px 0 0 0;
+        font-size: 52px;
+        line-height: 70px;
     }
 
     .row1-col1, .row1-col2{
         flex: 100%;
-        margin: 20px 50px;
+        margin: 20px 15px;
         text-align: center;
         align-items: center;
     }
@@ -919,104 +988,146 @@ footer p{
         padding: 0;
     }
 
+    .row1-col1 .btns{
+        padding-left: 10px;
+    }
+
     #rect{
         display: none;
+        right: 0;
+        width: 0;
+        height:0;
     }
-
-    #img1{
-        z-index: 2;
+    
+    .row1-col2 {
         position: relative;
-        top: 30px;
-        margin: 20px 50px 0px 50px;
-    }
-
+        top: 0;
+        left: 0;
+        float: left;
+        height: 770px;
+        max-width: none;
+        padding: 0;
+        width: 100%;
+        margin-right: 0;
+      }
+    
+    #img1 {
+        position: absolute;
+        top: 95px;
+        right: 20px;
+        padding-top: 0;
+      }
+    
     #img2 {
-        z-index: 3;
-        position: relative;
-        top: -510px;
-        left: -40px;
-        margin: 0px 50px 0px 50px;
+        position: absolute;
+        top: 140px;
+        right: 60px;
       }
       
     #img3 {
-        z-index: 5;
-        position: relative;
-        top: -900px;
-        left: -50px;
-        margin: 0px 50px 0px 50px;
+        position: absolute;
+        top: 250px;
+        left: 0px;
       }
     
     #img4 {
-        z-index: 6;
-        position: relative;
-        top: -650px;
-        left: -3px;
-        margin: 0px 50px 0px 50px;
+        position: absolute;
+        top: 500px;
+        right: 32px;
       }
     
     #circle{
         color: #e5288d3d;
         font-size: 50px;
-        z-index: 7;
-        position: relative;
-        top: -1020px;
-        right: -140px;
-        margin: 0px 50px 0px 50px;
+        position: absolute;
+        top: 300px;
+        right: 35px;
     }
     
     #f-1, #f-2, #f-3, #f-4{
         color: #7813e55b;
         font-size: 50px;
-        z-index: 7;
-        position: relative;
-        margin: 0px 50px 0px 50px;
+        position: absolute;
     }
     
     #f-1{
         transform: rotate(135deg);
-        top: -1225px;
-        right: 24px;
+        top: 88px;
+        left: 43px;
     }
     #f-2{
         transform: rotate(-135deg);
-        top: -1225px;
-        right: 130px;
+        top: 115px;
+        left: 70px;
     }
     #f-3{
         transform: rotate(315deg);
-        top: -1195px;
-        right: 272px;
+        top: 142px;
+        left: 45px;
     }
     #f-4{
         transform: rotate(-315deg);
-        top: -1195px;
-        right: 450px;
+        top: 115px;
+        left: 15px;
     }
     
     #c-1, #c-2, #c-3, #c-4, #c-5, #c-6, #c-7, #c-8, #c-9, #c-10{
         color: #0d62d854;
         font-size: 10px;
-        z-index: 9;
-        position: relative;
-        margin: 0px 50px 0px 50px;
-    }
-    .x-circle{
-        display: none;
+        position: absolute;
     }
     
+    #c-1, #c-2, #c-3, #c-4, #c-5{
+        left:30px;
+    }
+    
+    #c-6, #c-7, #c-8, #c-9, #c-10{
+        left:47px; 
+    }
+    
+    #c-1, #c-6{
+        top: 475px;
+    }
+    
+    #c-2, #c-7{
+        top: 500px;
+    }
+    
+    #c-3, #c-8{
+        top: 525px;
+    }
+    
+    #c-4, #c-9{
+        top: 550px;
+    }
+    
+    #c-5, #c-10{
+        top: 575px;
+    }
+        
     .row2{
         display: flex;
         flex-wrap: wrap;
+        margin: 0 0 30px 0 ;
     }
     
+    .row2-col2{
+        margin: 20px 0 0 0;
+    }
+
     .row2-col1, .row2-col2{
         flex: 100%;
+        padding-bottom: 80px;
         margin: 0;
         text-align: center;
-    }    
-    
-    .row2-col2{
-        margin: 20px 30px 0 30px;
+    }       
+
+    .row2-col2 h1{
+        font-size: 28px;
+    }
+
+    .row2-col2 p{
+        padding-bottom: 15px;
     }
     
     .row3{
@@ -1025,11 +1136,11 @@ footer p{
     }
     
     .row3-col1{
-        margin: 0 50px;
-        padding: 0 150px;
+        margin: 0;
+        padding: 0 20%;
     }
     
-    .row3-col1, .row3-col2{
+    .row3-col2{
         margin: 0;
         padding: 0;
     }
@@ -1037,82 +1148,212 @@ footer p{
     .row3-col2{
         display: flex;
         flex-wrap: wrap;
-        margin: -10px;
-        width: 100%;
+        margin: 0px;
+        width: 80%;
+        align-self: center;
     }
     
     .row3-col2>*{
-        flex: 1 1 45%;
+        flex: 1 1 48%;
         margin: 10px;
     }
+
+    .row3-col1 h1{
+        font-size: 25px;
+    }
+
+    .row3-col1 .btn2{
+        margin-top: 10px;
+    }
+
+    .row3-col2-row1, .row3-col2-row2, .row3-col2-row3, .row3-col2-row4 {
+        padding: 40px 8% 20px 8%;
+        margin: 10px;
+    }
+
     
-    .row4{
+    .save-hover-menu{
+        display: none;
+        border-radius: 9px;
+        background-color:white;
+        width: 350px;
+        height: 110px;
+        box-shadow: 0 0 3px #b8b7b7;
+        padding: 15px;
+    }
+
+    .dropmenu{
+        position: absolute;
+        z-index: 1;
+        left: 90px;
+        top: 35px;
+    }
+
+    .row4 {
         flex-direction: column;
         text-align: center;
     }
     
-    .row4-col1{
-        margin: 0;
-        align-self: center;
+    .row4-col2 p:first-child {
+        margin: 0  10%  ;
     }
 
-    .row4-col2{
-        margin: 0 10px;
-        width: 100%;
-        margin-top: 60px;
+    .row4-col2 h1 {
+        font-size: 35px;
     }
 
-    .row4-col2 p:first-child{
-        margin: 0 25%;
+    #invest {
+        padding-right: 0;
+    }
+    .row4-col2 p {
+        font-size: 16px;
+        margin-bottom: 0;
         padding: 0;
     }
 
-    #invest{
-        padding-right: 0;
-    }
-
-    .row5{
-        flex-direction: column;
-        height: 900px;
-        position: relative;
-    }
-
-    .row5-col1{
+    .row4-col2 {
         width: 100%;
-        padding: 5%;
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+    }
+
+    
+    .row4-col1 {
+        width: 100%;
+        margin-left:0px ;
+        position: relative;
+        top: 0;
+        left: 0;
+        float: left;
+        height: 650px;
+        max-width: none;
+        padding: 0;
+        width: 100%;
+        margin-right: 0;
+    }
+
+    #circle-{
+        color: #e9e0f856;
+        font-size: 270px;
+        z-index: -1;
+        position: absolute;
+        top: 30%;
+        left: 0;
+    }
+
+    
+#c--1, #c--2, #c--3, #c--4, #c--5, #c--6, #c--7, #c--8, #c--9, #c--10{
+    color: #d4bdfab4;
+    font-size: 10px;
+    position: absolute;
+}
+
+#c--1, #c--2, #c--3, #c--4, #c--5{
+    left: 375px;
+}
+
+#c--6, #c--7, #c--8, #c--9, #c--10{
+    left:395px; 
+}
+
+#c--1, #c--6{
+    top: 25px;
+}
+
+#c--2, #c--7{
+    top: 50px;
+}
+
+#c--3, #c--8{
+    top: 75px;
+}
+
+#c--4, #c--9{
+    top: 100px;
+}
+
+#c--5, #c--10{
+    top: 125px;
+}
+
+    
+    .row5 {
+        flex-direction: column;
+        margin-bottom: 0px;
+        position: relative;
+        left: 0px;
+        height: 220vw;
+        text-align: center;
+    }
+
+    .row5-col1 {
+        background-color: #0D60D8;
+        padding: 12% 10%;
+        width: 100%;
     }
 
     .row5-col2 {
-        width: 80%;
-        height: 60%;
+        width: 100%;
+        height: 800px;
         overflow: hidden;
-}
-
-    .row5-col2 img{
-        width: 100%;
-        height: 100%;
-        margin: -15px 0 0 0;
-}
-
-    .row6{
-        margin-top: 200px;
     }
 
-    .row7{
-        display: flex;
+    .row5-col2 img {
+        height: 600px;
+        margin: -40px 0 0 -170px;
+    }
+
+    .row6 {
+        margin-top: 100px;
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+
+    .row6-col1{
+        margin-top: 70px;
+    }
+
+    .row6-col1, .row6-col2 {
+        width: 100%;
+        padding: 0 7%;
+    }
+
+    .row6-col2 h1 {
+        font-size: 30px;
+    }
+
+    .rect{
+        display: none;
+    }
+
+    .row7 {
+        margin-top: 100px;
+        padding: 70px 0;
         flex-wrap: wrap;
-        margin: -10px;
+        justify-content: center;
+    }
+
+    .row7 h1 {
         width: 100%;
+        font-size: 25px;
+        padding: 0 20px;
+        text-align: center;
     }
 
-    .row7>h1{
-        flex: 1 1 100%;
-        margin: 10px;
+    .row7 a{
+        width: 50%;
     }
 
-    .row7>*{
-        flex: 1 1 20%;
-        margin: 10px;
+    .row7 > a {
+        padding: 30px 10px 0 0;
+        align-self: center;
+    }
+
+    .row7 a img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .footer{
@@ -1127,39 +1368,86 @@ footer p{
 
     .footer>.col4{
         flex: 1 1 100%;
-        margin: 10px;
+        margin: 0;
     }
 
     .footer>*{
         flex: 1 1 45%;
-        margin: 10px;
+        margin: 0px;
     }
 
     .col4 li{
         text-align: left;
     }
 
+    .footer ul {
+        padding: 0;
+    }
+
     .piggyvest{
         padding: 0 12px;
+    }
+    
+    .footer .col4, .col3, .col2, .col1{
+        margin-top: 30px;
+    }
+
+    
+
+@media screen and (max-width: 420px) {
+    .btns{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+    }   
+
+    .row1-col1 .btns{
+        padding: 0;
+    }
+
+    .row1-col1 .btn1{
+        width: 60%;
+    }
+
+    .btn-group{
+        margin: 2%;
+    }
+
+    .row1-col1 button {
+        margin-top: 30px;
+    }
+
+    .row1-col1 .btn1:last-child{
+        margin-top: 0;
+    }
+
+    .btns .btn1:first-child{
+        margin-bottom: 20px;
+    }
+
+    .btn1 {
+        padding: 8px 10px;
+        width: 70%;
+    }
+
+    .btn-group img {
+        margin-top: 0;
+    }
+
+    .row3-col2{
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0px;
+        width: 100%;
+        align-self: center;
+    }
+
+    .row3-col2>*{
+        flex: 1 1 48%;
+        margin: 10px;
     }
 
 }
 
-@media screen and (max-width: 600px) {
-    body{
-        padding: 0px 40px 0px 40px;
-    }
-
-    .nav-right .btn1{
-        padding: 20px 100px;
-    }
-
-    .nav-right .btn2{
-        padding: 20px 50px;
-    }
-
-
-  }
-
-/* 
-    color:#0C567B;*/
+}
